Prevent travel distance amount and measurement overlap

--- a/templates/documents/reise_template.css
+++ b/templates/documents/reise_template.css
@@ -98,6 +98,7 @@ td.mini, th.mini {
 .field.km {
 	width:		12mm;
 	text-align:	center;
+	direction:	rtl;
 }
 .field.text {
 	width:		60mm;
